# misc

./: README.md
1-hour_coding/circle_c/: circle_c_test.py
1-hour_coding/client_server/: client.py  server.py
1-hour_coding/esp32/hello_world/: Cargo.toml
1-hour_coding/ll_vs_ar/: Cargo.toml
1-hour_coding/sonus_imago/: .gitignore  image_enc.py
embedded/esp32/: .gitignore
learning_rust/simple_crypt/: .gitignore  Cargo.toml
learning_rust/simple_crypt/src/: crypt_fs.rs  main.rs
learning_rust/simple_crypt/src/crypt_fs/: error.rs  fuse.rs
neural-networks/auto_encoder/: .gitignore  models.py  patterns.py  show.py
neural-networks/chainer/: chainer_testing.py  enviroment.py
neural-networks/dgn/: rpi_DQN_learning.py  rpi_tensorforce.py
neural-networks/inv_model/: .gitignore  model.py  test.py  train.py
neural-networks/playing with keras/: README  Trained_Neuro_Net.h5  add_noise.py  neural_network_train.py  x_sens_array.npy
neural-networks/q_learning_compition/: agent.py  driver.py  testing.py
neural-networks/stable-baselines/: rpi_env_server.py  servo_env_real.py  servo_env_sim.py
neural-networks/torch_lightning/: .gitignore  LeNet.ckpt  dataloader.py  test.py
neuro_networks/chainer/: gym_test.py
neuro_networks/dgn/: CartPole.py  requirements.txt  rpi_Q_learning.py  tensorforce_testing.py
neuro_networks/playing with keras/: Trained_Neuro_Net.h5  gen_data.py  test_neural_networks.py  view_results.py
neuro_networks/stable-baselines/: model_test.py  model_view.py  trainer.py
porbun-dns/: README  porkbun_ddns.py
porkbun-dns/: README
(+41 files in other folders)
